[metadata]
name = networking-ofagent
version = 2015.1
summary = OpenStack Networking ofagent
description-file =
    README.rst
author = Ryu Team
author-email = ryu-devel@lists.sourceforge.net
home-page = https://wiki.openstack.org/wiki/Neutron/OFAgent
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_ofagent
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/ofagent.filters
    etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_ofa.ini
#scripts =

[global]
setup-hooks =
    pbr.hooks.setup_hook
    networking_ofagent.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-ofagent-agent = networking_ofagent.plugins.ofagent.agent.main:main

neutron.ml2.type_drivers =
    ofagent = networking_ofagent.plugins.ml2.drivers.mech_ofagent:OfagentMechanismDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ofagent/locale/networking_ofagent.pot

[compile_catalog]
directory = networking_ofagent/locale
domain = networking_ofagent

[update_catalog]
domain = networking_ofagent
output_dir = networking_ofagent/locale
input_file = networking_ofagent/locale/networking_ofagent.pot

[wheel]
universal = 1
